2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Put a call to Socket::isReadable() in try block.
	* src/HttpServerBodyCommand.cc
	* src/HttpServerCommand.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed segmentation fault error. SocketBuffer::sendResponse() may throw
	exception , so it is now in try block.
	* src/HttpServerResponseCommand.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added "amChoking" and "peerChoking" key in getPeers response.
	* src/XmlRpcMethodImpl.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added test case for zero-length filter.
	* test/BitfieldManTest.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	getFiles command now returns file data for finished/stopped
	downloads.	
	* src/XmlRpcMethodImpl.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	DownloadResult now has the list of FileEntry.  The download
	summary displays the path of first selected file and the number of
	remaining files for multi-file torrent.
	* src/DownloadResult.h
	* src/RequestGroup.cc
	* src/RequestGroupMan.cc
	* test/RequestGroupTest.cc
	
2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed segmentation fault error when no file is selected in
	multi-file torrent.	
	* src/BitfieldMan.cc
	
2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Escaped <,>,& character in XML-RPC response.
	* src/XmlRpcMethod.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Throw DlAbortEx instead of FatalException during parsing options
	because we don't want for aria2 to quit when bad option is passed
	via XML-RPC.
	* src/OptionHandlerException.cc
	* src/OptionHandlerException.h
	* src/OptionHandlerImpl.h
	* src/OptionParser.cc
	* src/OptionParser.h
	* src/PStringSegment.cc
	* src/ParameterizedStringParser.cc
	* src/download_helper.cc